# ipyregulartable

./: .bumpversion.cfg  .gitignore  AUTHORS  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  azure-pipelines.yml  codacy.yml  ipyregulartable.json  pyproject.toml  setup.cfg  setup.py
.github/: CODE_OF_CONDUCT.md
.github/workflows/: build.yml  codeql.yml  dependency-review.yml  publish.yml
binder/: postBuild  requirements.txt
docs/examples/: click_events.ipynb  edit_events.ipynb  styling.ipynb  two_billion.ipynb
ipyregulartable/: __init__.py  _version.py  widget.py
ipyregulartable/datamodel/: __init__.py  base.py  demo.py  numpy.py  pandas.py
ipyregulartable/extension/: install.json
ipyregulartable/nbextension/: __init__.py
ipyregulartable/nbextension/static/: extension.js
ipyregulartable/tests/: __init__.py  conftest.py  test_nbextension_path.py
js/: .eslintrc.js  babel.config.js  jest.config.js  package.json  testing.config.js  tsconfig.json  webpack.config.js
js/css/: widget.css
js/src/: extension.js  extension.ts  index.js  index.ts  model.js  model.ts  plugin.js  plugin.ts  testing.js  typings.d.ts  version.js  version.ts  view.js  view.ts  widget.js  widget.ts
js/src/features/: row-stripes.js
js/src/js/: table.js
js/src/js/table/: element.js  table.jsx
js/src/less/: index.less
js/style/: index.css
js/tests/: activate.test.js  activate.test.ts  assetsTransformer.js  export.test.js  export.test.ts  fileMock.js  styleMock.js
