[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab>4,<5",
]
build-backend = "hatchling.build"

[project]
name = "ipyregulartable"
description = "ipywidgets wrapper around regular-table"
version = "0.3.7"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "The ipyregulartable authors" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
    "Widgets",
    "IPython",
    "Table",
    "Grid",
    "Datagrid",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "ipywidgets>=7.5.1",
    "jupyterlab>=4,<5",
    "numpy",
    "pandas>=0.22",
]

[project.optional-dependencies]
develop = [
    "check-manifest",
    "ruff",
    "pytest",
    "pytest-cov",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
repository = "https://github.com/finos/ipyregulartable"
homepage = "https://github.com/finos/ipyregulartable"

[tool.check-manifest]
ignore = [
	"ipyregulartable/labextension/**",
	"ipyregulartable/nbextension/**",
	"js/**"
]

[tool.hatch.build]
artifacts = [
    "ipyregulartable/nbextension/static/index.*",
    "ipyregulartable/labextension"
]

[tool.hatch.build.targets.wheel.shared-data]
"ipyregulartable/nbextension" = "share/jupyter/nbextensions/ipyregulartable"
"ipyregulartable/labextension" = "share/jupyter/labextensions/ipyregulartable"
"ipyregulartable/extension/install.json" = "share/jupyter/labextensions/ipyregulartable/install.json"
"ipyregulartable/extension/ipyregulartable.json" = "etc/jupyter/nbconfig/notebook.d/ipyregulartable.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    "binder",
    "docs",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "ipyregulartable/nbextension/static/index.js",
    "ipyregulartable/labextension/package.json",
]
skip-if-exists = [
    "ipyregulartable/nbextension/static/index.js",
    "ipyregulartable/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "js"
build_cmd = "build"

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["ipyregulartable"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
